samples/_failures_safe/1761528597_3b3ada_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_31b5f94b.c: In function ‘main’:
./samples/SAFE/__tmp_31b5f94b.c:170:5: error: expected declaration or statement at end of input
  170 |     printf("Tokens:\n");
      |     ^~~~~~
